objects/PC_SupportPlan__c.object
<CustomObject>
    <description>Custom object in Patient Connect that helps to create a predefined template of activities (tasks and events) according to the type of case and the brands that are supported.</description>
    <fields>
        <fullName>PC_ConditionBehavior__c</fullName>
        <description>Indicates how the Start Condition should be treated: 
 -Wait Until True: The Support Plan will stay on the current activity unless a Start Condition is met.
 -No Condition: There is no condition on the Support Plan activity and hence can be created/executed.</description>
        <label>Condition Behavior</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Condition</fullName>
                    <default>true</default>
                    <label>No Condition</label>
                </value>
                <value>
                    <fullName>Wait until True</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Condition_Option__c</fullName>
        <label>Condition Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Conditional Builder</fullName>
                    <label>Condition Builder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Conditional_Logic__c</fullName>
        <description>JSON string containing the conditional rows</description>
        <label>Conditional Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>Provides a brief description about Support Plan.</description>
        <inlineHelpText>Description of Support Plan</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_InitialActivity__c</fullName>
        <description>Indicates if an activity is the first activity of a Support Plan. References &apos;Internal Activity Number&apos;.</description>
        <label>Initial Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Support Plan is active.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_StartCondition__c</fullName>
        <description>Indicates the condition that must be evaluated before a Support Plan is initiated.</description>
        <inlineHelpText>Condition that needs to be met to initiate Support Plan</inlineHelpText>
        <label>Start Condition</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlan_Behavior__c</fullName>
        <description>This describes the behavior of the Support Plan. Note - If the value is blank, then the behavior is assumed to be &apos;RunEveryTimeRuleMatches&apos; by default.</description>
        <inlineHelpText>Would you like to run this Support Plan every time the conditions are met for a record?</inlineHelpText>
        <label>Support Plan Runtime Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RunEveryTimeRuleMatches</fullName>
                    <default>true</default>
                    <label>Yes, run this Support Plan every time the conditions are met.</label>
                </value>
                <value>
                    <fullName>RunOncePerRecord</fullName>
                    <label>No, run this Support Plan only once per record.</label>
                </value>
                <value>
                    <fullName>RunEveryTimeIfNoPendingRuntime</fullName>
                    <label>No, run this Support Plan only when there are no pending activities from previous Support Plan Runtime(s).</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_TriggerEventConditionOption__c</fullName>
        <description>Indicates the type of option to evaluate trigger condition</description>
        <label>Condition Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conditional Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_TriggerEventCondition__c</fullName>
        <description>Stores the Trigger condition logic in JSON Format</description>
        <label>Condition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_TriggerEventConditionalBehavior__c</fullName>
        <description>Indicates how the Trigger Event Condition should be treated:
-Wait Until True: The Support plan will stay on the current activity till Trigger Event Condition is met.
-No Condition: There is no condition and hence Support plan can be created/executed.</description>
        <label>Conditional Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Condition</fullName>
                </value>
                <value>
                    <fullName>Wait until True</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_TriggerEventObject__c</fullName>
        <description>API Name of Object on which  Support plan is Run</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TriggerEventType__c</fullName>
        <description>Event Type of Trigger Object on which  Support plan should start processing</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Insert/Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Version__c</fullName>
        <description>Indicates the version of the Support Plan.</description>
        <label>Version</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Support Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Version__c</columns>
        <columns>PC_IsActive__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PC_StartCondition__c</columns>
        <columns>PC_ConditionBehavior__c</columns>
        <columns>PC_Condition_Option__c</columns>
        <columns>PC_Conditional_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Support Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PC_Avoid_DuplicateName</fullName>
        <active>true</active>
        <errorConditionFormula>and(
    Name = VLOOKUP
       ($ObjectType.PC_SupportPlan__c.Fields.Name , $ObjectType.PC_SupportPlan__c.Fields.Name, Name ),

    not(
     Id=VLOOKUP
         ($ObjectType.PC_SupportPlan__c.Fields.Id , $ObjectType.PC_SupportPlan__c.Fields.Name, Name )))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Support Plan name already exists, please choose a different name.</errorMessage>
    </validationRules>
</CustomObject>